FIX: Recovered default styles to remove the white space between the footer and the window

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
+html, body {
+  box-sizing: border-box;
+  background-color: black;
 
+  margin: 0;
+  padding: 0;
+}
